--- a/core/templates/core/roomlist.html
+++ b/core/templates/core/roomlist.html
@@ -23,68 +23,50 @@
             <div class="col-md-9">
                 <h2 class="my-4">Available Rooms</h2>
                 <div class="row justify-content-evenly listroom-row">
+                    {% for rooms in all_rooms %}
                     <div class="col-md-6 col-lg-3 roomlist-sroom">
                         <div class="card h-100 shadow-sm border-0">
-                            <img src="{% static 'img/s1.bmp' %}" class="card-img-top" alt="Cozy Single">
-                            <div class="card-body">
-                                <h5 class="card-title fw-bold room-name">Cozy Single</h5>
-                                <p class="overflow-hidden text-truncate room-details">Shared bathroom • 15m² • Desk •
-                                    Lounge
-                                    access</p>
+                            <img src="{{ rooms.room_img.url }}" class="card-img-top" alt="Cozy Single">
+                            <div class="card-body pb-1">
+                                <h5 class="card-title fw-bold room-name">{{ rooms.title }}</h5>
+                                <p class="overflow-hidden text-truncate room-details">{{ rooms.address }}</p>
                                 <div class="d-flex justify-content-between align-items-center flex-lg-column">
-                                    <span class="h5 mb-0 room-price">$65/night</span>
-                                    <a href="" class="text-decoration-none m-3 btn-primary-custom listroom-btn">View Details</a>
+                                    <span class="h5 mb-0 room-price">{{ rooms.price }}</span>
+                                    <a href="{% url 'roomdetail' rooms.room_slug %}" class="text-decoration-none mb-1 m-3 btn-primary-custom listroom-btn">View Details</a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-3 roomlist-sroom">
-                        <div class="card h-100 shadow-sm border-0">
-                            <img src="{% static 'img/s4.bmp' %}" class="card-img-top" alt="Cozy Single">
-                            <div class="card-body">
-                                <h5 class="card-title fw-bold room-name">Cozy Single</h5>
-                                <p class="overflow-hidden text-truncate room-details">Shared bathroom • 15m² • Desk •
-                                    Lounge
-                                    access</p>
-                                <div class="d-flex justify-content-between align-items-center flex-lg-column">
-                                    <span class="h5 mb-0 room-price">$65/night</span>
-                                    <a href="" class="text-decoration-none m-3 btn-primary-custom listroom-btn">View Details</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-3 roomlist-sroom">
-                        <div class="card h-100 shadow-sm border-0">
-                            <img src="{% static 'img/s3.bmp' %}" class="card-img-top" alt="Cozy Single">
-                            <div class="card-body">
-                                <h5 class="card-title fw-bold room-name">Cozy Single</h5>
-                                <p class="overflow-hidden text-truncate room-details">Shared bathroom • 15m² • Desk •
-                                    Lounge
-                                    access</p>
-                                <div class="d-flex justify-content-between align-items-center flex-lg-column">
-                                    <span class="h5 mb-0 room-price">$65/night</span>
-                                    <a href="" class="text-decoration-none m-3 btn-primary-custom listroom-btn">View Details</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-3 roomlist-sroom">
-                        <div class="card h-100 shadow-sm border-0">
-                            <img src="{% static 'img/s3.bmp' %}" class="card-img-top" alt="Cozy Single">
-                            <div class="card-body">
-                                <h5 class="card-title fw-bold room-name">Cozy Single</h5>
-                                <p class="overflow-hidden text-truncate room-details">Shared bathroom • 15m² • Desk •
-                                    Lounge
-                                    access</p>
-                                <div class="d-flex justify-content-between align-items-center flex-lg-column">
-                                    <span class="h5 mb-0 room-price">$65/night</span>
-                                    <a href="" class="text-decoration-none m-3 btn-primary-custom listroom-btn">View Details</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    {% endfor %}
                 </div>
+                
             </div>
+            <!-- Pagination -->
+            <nav aria-label="Page navigation">
+                <ul class="pagination justify-content-center mt-4 ms-5">
+                    {% if all_rooms.has_previous %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page=1">First</a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ all_rooms.previous_page_number }}">Previous</a>
+                    </li>
+                    {% endif %}
+
+                    <li class="page-item active">
+                        <span class="page-link">Page {{ all_rooms.number }} of {{ all_rooms.paginator.num_pages }}</span>
+                    </li>
+
+                    {% if all_rooms.has_next %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ all_rooms.next_page_number }}">Next</a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ all_rooms.paginator.num_pages }}">Last</a>
+                    </li>
+                    {% endif %}
+                </ul>
+            </nav>
         </div>
     </div>
 
