--- a/core/templates/seller/add_room.html
+++ b/core/templates/seller/add_room.html
@@ -1,4 +1,4 @@
-{% extends "seller_base/sidebar_base.html" %}
+{% extends "base/sidebar_base.html" %}
 {% load static %}
 {% block content %}
     <style>
