--- a/core/templates/include/sidebar.html
+++ b/core/templates/include/sidebar.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seller Dashboard</title>
+    <title>Room Rental</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/seller/seller_dashboard.css' %}">
@@ -62,6 +62,8 @@
                         Rooms</a></li>
                 <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_appointments' %}"><i class="far fa-calendar-check me-2"></i>
                         Appointments</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_subscription' %}"><i class="fas fa-clipboard-list me-2"></i>
+                        Subscription</a></li>
                 <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_profile'%}"><i class="fas fa-user me-2"></i>
                         Profile</a></li>
                 <li class="nav-item"><a class="nav-link text-white" href="{% url 'logout_user' %}"><i class="fas fa-sign-out-alt me-2"></i>
