--- a/core/templates/seller/seller_appointments.html
+++ b/core/templates/seller/seller_appointments.html
@@ -2,8 +2,27 @@
 {% load static %}
 {% block content %}
 
+
+<h4 class="mb-2">Here are your all appointments</h4>
+<div class="appointment-dropdown d-flex justify-content-end align-item-end mt-2">
+    <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+            Filter Appointments
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+            <li><a class="dropdown-item" href="?filter=requests">Appointment Requests</a></li>
+            <li><a class="dropdown-item" href="?filter=pending">Pending Appointments</a></li>
+            <li><a class="dropdown-item" href="?filter=finished">Completed Appointments</a></li>
+            <li><a class="dropdown-item" href="?filter=canceled">Canceled Appointments</a></li>
+        </ul>
+    </div>
+    
+</div>
+
+
 <!-- Appoinment Requests -->
 <div class="row">
+    {% if filter_option == "requests" %}
     <div class="my-4">
         <h4 class="Listed-Rooms-header fw-bold fs-3">Appoinment Requests</h4>
         <div class="table-responsive border shadow">
@@ -49,9 +68,11 @@
             </table>
         </div>
     </div>
+    {% endif %}
     
     <!-- Pending Appoinment -->
-    <div class="my-5">
+    {% if filter_option == "pending" %}
+    <div class="my-4">
         <h4 class="Listed-Rooms-header fw-bold fs-3">Pending Appoinments</h4>
         <div class="table-responsive border shadow">
             <table class="table table-hover border-2">
@@ -95,9 +116,11 @@
             </table>
         </div>
     </div>
+    {% endif %}
     
-        <!-- FInished Appoinment -->
-    <div class="my-5">
+    <!-- FInished Appoinment -->
+    {% if filter_option == "finished" %}
+    <div class="my-4">
         <h4 class="Listed-Rooms-header fw-bold fs-3">Finished Appoinments</h4>
         <div class="table-responsive border shadow">
             <table class="table table-hover border-2">
@@ -132,7 +155,46 @@
             </table>
         </div>
     </div>
+    {% endif %}
+
+    <!-- cancled Appoinment -->
+    {% if filter_option == "canceled" %}
+    <div class="my-4">
+        <h4 class="Listed-Rooms-header fw-bold fs-3">Cancled Appoinments</h4>
+        <div class="table-responsive border shadow">
+            <table class="table table-hover border-2">
+                <thead class="table-head">
+                    <tr class="border-2">
+                        <th>Client</th>
+                        <th>Phone</th>
+                        <th>Date</th>
+                        <th>Time</th>
+                        <th>Status</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% if canceled_appointments %}
+                    {% for appointment in canceled_appointments %}
+                    <tr class="border-2">
+                        <td>{{appointment.customer.name|upper}}</td>
+                        <td>{{appointment.customer.phone}}</td>
+                        <td>{{appointment.date}}</td>
+                        <td>{{appointment.date}}</td>
+                        <td class="text-danger">{{appointment.status|upper}}</td>
+                    </tr>
+                    {% endfor %}
+                    {% else %}
+                    <tr>
+                        <td colspan="5" class="text-center">
+                            <p class="text-muted">You have not Finished any Appointments Yet</p>
+                        </td>
+                    </tr>
+                    {% endif %}
+                </tbody>
+            </table>
+        </div>
     </div>
+    {% endif %}
     </div>
 </div>
 
