--- a/core/templates/include/sidebar.html
+++ b/core/templates/include/sidebar.html
@@ -58,10 +58,20 @@
             <ul class="nav flex-column mt-3">
                 <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_dashboard' %}"><i class="fas fa-home me-2"></i>
                         Dashboard</a></li>
-                <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_rooms' %}"><i class="fas fa-bed me-2"></i>
+                {% if not user.is_subscribed %}
+                <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_rooms' %}" data-bs-toggle="modal" data-bs-target="#renewModal"><i class="fas fa-bed me-2"></i>
                         Rooms</a></li>
-                <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_appointments' %}"><i class="far fa-calendar-check me-2"></i>
+                {% else %}
+                <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_rooms' %}"><i class="far fa-bed me-2"></i>
+                    Rooms</a></li>
+                {% endif %}
+                {% if not user.is_subscribed %}
+                <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_appointments' %}" data-bs-toggle="modal" data-bs-target="#renewModal"><i class="far fa-calendar-check me-2"></i>
                         Appointments</a></li>
+                {% else %}
+                <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_appointments' %}"><i class="far fa-calendar-check me-2"></i>
+                    Appointments</a></li>
+                {% endif %}
                 <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_subscription' %}"><i class="fas fa-clipboard-list me-2"></i>
                         Subscription</a></li>
                 <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_profile'%}"><i class="fas fa-user me-2"></i>
@@ -86,11 +96,28 @@
                 </div>
                 <div class="offcanvas-body">
                     <ul class="nav flex-column">
-                        <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_dashboard' %}"><i class="fas fa-home me-2"></i>Dashboard</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_rooms' %}"><i class="fas fa-bed me-2"></i>Rooms</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_appointments' %}"><i class="far fa-calendar-check me-2"></i> Appointments</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_profile'%}"><i class="fas fa-user me-2"></i> Profile</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="{% url 'logout_user' %}"><i class="fas fa-cog me-2"></i>Logout</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_dashboard' %}"><i class="fas fa-home me-2"></i>
+                            Dashboard</a></li>
+                    {% if not user.is_subscribed %}
+                    <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_rooms' %}" data-bs-toggle="modal" data-bs-target="#renewModal"><i class="fas fa-bed me-2"></i>
+                            Rooms</a></li>
+                    {% else %}
+                    <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_rooms' %}"><i class="far fa-bed me-2"></i>
+                        Rooms</a></li>
+                    {% endif %}
+                    {% if not user.is_subscribed %}
+                    <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_appointments' %}" data-bs-toggle="modal" data-bs-target="#renewModal"><i class="far fa-calendar-check me-2"></i>
+                            Appointments</a></li>
+                    {% else %}
+                    <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_appointments' %}"><i class="far fa-calendar-check me-2"></i>
+                        Appointments</a></li>
+                    {% endif %}
+                    <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_subscription' %}"><i class="fas fa-clipboard-list me-2"></i>
+                            Subscription</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_profile'%}"><i class="fas fa-user me-2"></i>
+                            Profile</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="{% url 'logout_user' %}"><i class="fas fa-sign-out-alt me-2"></i>
+                            Log Out</a></li>
                     </ul>
                 </div>
             </div>
