--- a/core/templates/core/roomdetail.html
+++ b/core/templates/core/roomdetail.html
@@ -104,7 +104,7 @@
                         <h5 class="modal-title fs-5 text-center fw-bold mb-2" id="appointmentModalLabel">Appointment Scheduling</h5>
                         <div class="d-flex justify-content-between align-items-center">
                             <h3 class="modal-title fs-4 mb-0">{{room_detail.title}}</h3>
-                            <p class="text-end mb-0 mt-2"><i class="fa fa-user"></i> Ram Adhikari</p>
+                            <p class="text-end mb-0 mt-2"><i class="fa fa-user"></i> {{room_detail.seller.name}}</p>
                         </div>
                     </div>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
