--- a/core/templates/core/roomlist.html
+++ b/core/templates/core/roomlist.html
@@ -28,10 +28,12 @@
                         <div class="card h-100 shadow-sm border-0">
                             <img src="{{ rooms.room_img.url }}" class="card-img-top" alt="Cozy Single">
                             <div class="card-body pb-1">
-                                <h5 class="card-title fw-bold room-name">{{ rooms.title }}</h5>
-                                <p class="overflow-hidden text-truncate room-details">{{ rooms.address }}</p>
+                                <h5 class="card-title fw-bold overflow-hidden text-truncate room-name">{{ rooms.title }}</h5>
+                                <p class=" room-details">                            
+                                    <i class="fas fa-map-marker-alt me-2"></i>
+                                    {{ rooms.city }}</p>
                                 <div class="d-flex justify-content-between align-items-center flex-lg-column">
-                                    <span class="h5 mb-0 room-price">{{ rooms.price }}</span>
+                                    <span class="h5 mb-0 room-price">रू {{ rooms.price }}</span>
                                     <a href="{% url 'roomdetail' rooms.room_slug %}" class="text-decoration-none mb-1 m-3 btn-primary-custom listroom-btn">View Details</a>
                                 </div>
                             </div>
