--- a/core/templates/include/sidebar.html
+++ b/core/templates/include/sidebar.html
@@ -7,8 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Room Rental</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    {% comment %} <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet"> {% endcomment %}
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/seller/seller_dashboard.css' %}">
+    <link rel="stylesheet" href="{% static 'css/seller/renew_subs.css' %}">
 <style>
 
 .seller-fa-bell{
@@ -62,7 +64,7 @@
                 <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_rooms' %}" data-bs-toggle="modal" data-bs-target="#renewModal"><i class="fas fa-bed me-2"></i>
                         Rooms</a></li>
                 {% else %}
-                <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_rooms' %}"><i class="far fa-bed me-2"></i>
+                <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_rooms' %}"><i class="fa-solid fa-bed"></i></i>
                     Rooms</a></li>
                 {% endif %}
                 {% if not user.is_subscribed %}
@@ -102,7 +104,7 @@
                     <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_rooms' %}" data-bs-toggle="modal" data-bs-target="#renewModal"><i class="fas fa-bed me-2"></i>
                             Rooms</a></li>
                     {% else %}
-                    <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_rooms' %}"><i class="far fa-bed me-2"></i>
+                    <li class="nav-item"><a class="nav-link text-white" href="{% url 'seller_rooms' %}"><i class="fa-solid fa-bed"></i></i>
                         Rooms</a></li>
                     {% endif %}
                     {% if not user.is_subscribed %}
