--- a/core/templates/seller/seller_rooms.html
+++ b/core/templates/seller/seller_rooms.html
@@ -48,16 +48,32 @@
         }
     </style>
     
-    <!-- Display messages -->
-    {% if messages %}
-        <div class="messages">
-        {% for message in messages %}
-            <div class="message {{ message.tags }}">
-                {{ message }}
-            </div>
-        {% endfor %}
+<!-- Display messages -->
+{% if messages %}
+<div class="messages">
+    {% for message in messages %}
+    <div class="alert-message alert-{{ message.tags }}">
+        <div class="message-icon">
+            {% if message.tags == 'success' %}
+            <i class="fas fa-check-circle"></i>
+            {% elif message.tags == 'error' %}
+            <i class="fas fa-exclamation-circle"></i>
+            {% elif message.tags == 'warning' %}
+            <i class="fas fa-exclamation-triangle"></i>
+            {% else %}
+            <i class="fas fa-info-circle"></i>
+            {% endif %}
         </div>
-    {% endif %}
+        <div class="message-content">
+            {{ message }}
+        </div>
+        <button class="close-btn" onclick="this.parentElement.remove()">
+            <i class="fas fa-times"></i>
+        </button>
+    </div>
+    {% endfor %}
+</div>
+{% endif %}
 
     <!-- Listed Products Table -->
     <h4 class="Listed-Rooms-header fw-bold fs-3">Listed Rooms</h4>
