adding customer profile ui and implement bakcned logic for customer profile details change and update

--- a/core/templates/include/header.html
+++ b/core/templates/include/header.html
@@ -41,7 +41,7 @@
                         {% endif %}                        
                     </a>
                     {% endif %}
-                    <a href="#" class="text-white text-decoration-none">
+                    <a href="{% url 'customer_profile' %}" class="text-white text-decoration-none">
                         {% if user.is_authenticated %}
                             {% if user.name %}
                                 <i class="fas fa-user"></i>&nbsp;&nbsp;{{ user.name | upper }}
