--- a/core/templates/include/header.html
+++ b/core/templates/include/header.html
@@ -76,6 +76,9 @@
                         <li class="nav-item">
                             <a class="nav-link m-2" href="{% url 'roomlist' %}">Rooms</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link m-2" href="{% url 'customer_chat_list' %}">Chat</a>
+                        </li>
                         {% endif %}
                         <li class="nav-item">
                             <a class="nav-link m-2" href="#">About</a>
